--- a/meme_generator/android/app/build.gradle
+++ b/meme_generator/android/app/build.gradle
@@ -27,8 +27,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     namespace "com.example.meme_generator"
-    compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    compileSdkVersion 33
+    ndkVersion "25.1.8937393"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -52,6 +52,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -69,4 +70,15 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:multidex:2.0.1'
+}
+configurations.all {
+   resolutionStrategy {
+      eachDependency {
+        if ((requested.group == "org.jetbrains.kotlin") 
+          &&(requested.name.startsWith("kotlin-stdlib"))) {
+            useVersion("1.8.0")
+        }
+    }
+}
 }
