--- a/meme_generator/pubspec.yaml
+++ b/meme_generator/pubspec.yaml
@@ -1,7 +1,7 @@
 name: meme_generator
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -14,11 +14,24 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  provider: ^6.1.2
+  drift: ^2.15.0
+  share_plus: ^7.2.2
+  sqlite3_flutter_libs: ^0.5.20
+  path_provider: ^2.1.2
+  path: ^1.8.3
+  sqlite3: ^2.4.0
+  screenshot: ^2.1.0
+  file_picker: ^6.1.1
+  permission_handler: ^11.3.0
+  dio: ^5.4.1
 
 dev_dependencies:
+  drift_dev: ^2.15.0
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 flutter:
   uses-material-design: true
