--- a/meme_generator/pubspec.yaml
+++ b/meme_generator/pubspec.yaml
@@ -25,13 +25,21 @@ dependencies:
   file_picker: ^6.1.1
   permission_handler: ^11.3.0
   dio: ^5.4.1
+  bloc: ^8.1.4
+  dynamic_color: ^1.7.0
+  go_router: ^13.2.4
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.1
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   drift_dev: ^2.15.0
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  go_router_builder: ^2.5.1
+  build_verify: ^3.1.0
 flutter:
   uses-material-design: true
