--- a/meme_generator/pubspec.yaml
+++ b/meme_generator/pubspec.yaml
@@ -6,8 +6,8 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: 3.2.3 # Dart SDK version
-  flutter: 3.16.3 # Flutter SDK version
+  sdk: ^3.2.3 # Dart SDK version
+  flutter: ^3.16.3 # Flutter SDK version
 
 dependencies:
   flutter:
@@ -31,6 +31,8 @@ dependencies:
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
   flutter_bloc: ^8.1.5
+  shared_preferences: ^2.2.3
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   drift_dev: ^2.15.0
